# Iris

./: .gitignore  CMakeLists.txt  TODO.md  imgui.ini
demos/armadillo/: main.cpp
demos/cube/: main.cpp
demos/cube/shaders/: fragment.frag
demos/david/: main.cpp
demos/f16/: main.cpp
demos/f16/model/: f16.mtl
demos/rubber_duck/: main.cpp
demos/rubber_duck/shaders/: fragment.frag
demos/small_point_cloud/: main.cpp
demos/small_point_cloud/shaders/: fragment.frag  vertex.vert
demos/texture/: main.cpp
demos/texture/shaders/: vertex.vert
demos/triangle/: main.cpp
demos/triangle/shaders/: vertex.vert
demos/visual_hull/shaders/: fragment.frag
demos/voxel_mesh/: main.cpp
examples/armadillo/: main.cpp
examples/controls/: main.cpp
examples/cube/: main.cpp
examples/cube/shaders/: fragment.frag  vertex.vert
examples/rubber_duck/: main.cpp
examples/rubber_duck/shaders/: vertex.vert
examples/small_point_cloud/: main.cpp
examples/texture/: main.cpp
examples/triangle/: main.cpp
examples/triangle/shaders/: fragment.frag  vertex.vert
examples/visual_hull/: main.cpp
examples/visual_hull/shaders/: fragment.frag  vertex.vert
examples/voxel_mesh/: main.cpp
src/core/: Buffer.hpp  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Controls.cpp  Controls.hpp  Directions.hpp  Exception.hpp  Hash.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.hpp  ObjReader.hpp  Octree.hpp  OpenGL.hpp  PlyReader.hpp  Primitives.hpp  Random.hpp  RenderObject.hpp  Renderer.hpp  Rotation.hpp  Shader.hpp  Shapes.hpp  SimpleWindow.hpp  Texture.hpp  Transform.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
